[package]
name = "fbdb-webscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dateparser = "0.2.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
